src/App.css
html, .App {
  background-color: 	#F5F5F5;
  height: 100%;
}

body, main {
  background-color: 	#F5F5F5;
}


.App-header a:link {
    text-decoration: none;
  
}

.tutorial-body {
  margin-left: 20px;
  margin-right: 20px;
  padding-bottom: 20px;
  padding-top: 95px;
  background-color: 	#F5F5F5;
  height: 100vh;
}

.upload-body {
  padding-top: 95px;
  margin-left: 20px;
  margin-right: 20px;
  padding-bottom: 20px;
  height: 100vh;
  background-color: 	#F5F5F5;
}

.upload-sections div{
  margin-top: 40px;
  margin-bottom: 30px;
  margin-left: 20px;
}

.getstarted-body {
  padding-top:90px;
  background-color: 	#F5F5F5;
  height: 100%;
  
}

.results1-body {
  padding-top: 95px;
  background-color: 	#F5F5F5;
  height: 75%;
  margin-left: 20px;
  margin-right: 20px;
}

.aboutus-body {
  margin-left: 20px;
  margin-right: 20px;
  padding-bottom: 20px;
  padding-top: 105px;
  background-color: 	#F5F5F5;
  height: 100vh;
}

.bottom-aboutus {
  padding-bottom: 50px;
}

.tabs-body {
  z-index: 1000;
  background-color: 	#F5F5F5;
  height: 75%;
  
}


/*a { text-decoration: none; color:black; }
a:visited { text-decoration: none; }
a:hover { text-decoration: none; }
a:focus { text-decoration: none; }
a:hover, a:active { text-decoration: none; }*/

.App-header a, .App-header a:hover, .App-header a:visited, .App-header a:active {
  color: inherit;
  text-decoration: none;
}

button a, button a:hover, button a:visited, button a:active {
  color: inherit;
  text-decoration: none;
}

/*.page-head {
  margin-top: 15px;
  padding-top: 20px;
  padding-left: 20px;
  padding-bottom: 25px;
}*/

.App-header {
  background-color: #3BEAD1;
  color: black;
  z-index: 1;
}

h1 {
  margin: 0px;
}

nav{
  display: flex;
  position: fixed;
  top:0;
  width: 100%;
  background-color: #3BEAD1;
  color: black;
	margin: 0px;
  overflow: auto;
  height: auto;
  padding-bottom: 20px;
}

.left-links {
  float: left;
  padding-left: 20px;
}

.right-links {
  float: right;
}

.navLink {
  padding-right: 30px;
  padding-top: 25px;
  margin: 0px;
  display: inline-block;
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}



@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#sections {
  /*display: flex;*/
  display: flex;
  justify-content: space-around;
  padding: 50px;
  height: 75%;

}

.section {
  padding: 20px;
  border-radius: 5px;
  text-align: center;
  background-color: white;
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  font-size: 14pt;
  width: 25%;
  height: fit-content;
  overflow: scroll;
  /*font-family; ------- font family for three buttons on home screen*/
}

/*button, .custom-file-upload {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-size: 14pt;
  background-color: #FAA916;
  border-radius: 5px;
  perspective: 1px;
  border: none;
  color: white; /* color of font inside orange buttons?  */
/*} /*add this style to button in input too*/

#general-section {
  background-color: #3BEAD1;
  text-align: center;
  padding-bottom: 100px;
  padding-top: 150px;
}

.privacy {
  padding-top: 30px;
}

#treemap {
  width: 900px;
}

.insights {
  padding-top: 30px;
}

.next-btn {
  padding-top: 70px;
  padding-bottom: 70px;
}

.upload {
  padding-top: 30px;
}


#general-section p {
  font-size: 24pt;
}

#bootstrap-overrides button { /* 100+1=101 priority score, yay! */
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-size: 14pt;
  background-color: #FAA916;
  border-radius: 5px;
  perspective: 1px;
  border: none;
  color: white;
}

#bootstrap-overrides button:hover {
  box-shadow: 0 0 3pt 2pt black;
}

.footer {
  position:fixed;
  bottom: 0;
  width: 100%;
             /* Footer height */
}

#wordcloud {
  display: flex;
  justify-content: space-between;
}

.groupTreemap {
  height: 800px;
  width: 1500px;
}

#area {
  width: 700px;
}

.exportDesc {
  padding-top: 20px;
}

